# ubtvlc

./: AUTHORS  HACKING  INSTALL  INSTALL.win32  MAINTAINERS  Makefile.in  NEWS  README  README.MacOSX.rtf  THANKS  aclocal.m4  bootstrap  config.h.in  configure  configure.ac  toolbox  vlc-0.8.1.ebuild  vlc-api.pl  vlc-config.in  vlc_0.7.2.final.orig.tar.gz.delta  vlc_0.7.2.final.orig.tar.gz.id  vlc_0.8.1.orig.tar.gz.delta  vlc_0.8.1.orig.tar.gz.id  vlc_0.8.2.orig.tar.gz.delta  vlc_0.8.2.orig.tar.gz.id  vlc_0.8.4-svn20050920.orig.tar.gz.delta  vlc_0.8.4-svn20050920.orig.tar.gz.id  vlc_0.8.4-svn20051025.orig.tar.gz.delta  vlc_0.8.4-svn20051025.orig.tar.gz.id  vlc_0.8.4.debian.orig.tar.gz.delta  vlc_0.8.4.debian.orig.tar.gz.id  vlc_0.8.5.debian.orig.tar.gz.delta  vlc_0.8.5.debian.orig.tar.gz.id  vlc_0.8.6-svn20060823.debian.orig.tar.gz.delta  vlc_0.8.6-svn20060823.debian.orig.tar.gz.id  vlc_0.8.6-svn20060918.debian.orig.tar.gz.delta  vlc_0.8.6-svn20060918.debian.orig.tar.gz.id  vlc_0.8.6-svn20061012.debian.orig.tar.gz.delta  vlc_0.8.6-svn20061012.debian.orig.tar.gz.id  vlc_0.8.6.h.orig.tar.gz.delta  (+132 more)
0.7.2.final-3/: vlc_0.7.2.final-3.dsc
0.8.1-1ubuntu7/: vlc_0.8.1-1ubuntu7.dsc
0.8.2-1ubuntu3/: vlc_0.8.2-1ubuntu3.dsc
0.8.4-svn20050920-3+hal0ubuntu3/: vlc_0.8.4-svn20050920-3+hal0ubuntu3.dsc
0.8.4-svn20051025-0ubuntu1/: vlc_0.8.4-svn20051025-0ubuntu1.dsc
0.8.4-svn20051025-0ubuntu1~breezy1/: vlc_0.8.4-svn20051025-0ubuntu1~breezy1.dsc
0.8.4.debian-1ubuntu1/: vlc_0.8.4.debian-1ubuntu1.dsc
extras/faad2/plugins/bmp/src/: Makefile.am  Makefile.in  libmp4.c  mp4_utils.c
(+2769 files in other folders)
